docs(api)!: 更新文档中的 API 入参描述
